src/parser/alang/ALangParser.cpp

// Generated from ALang.g4 by ANTLR 4.9


#include "ALangListener.h"

#include "ALangParser.h"


using namespace antlrcpp;
using namespace parser::alang;
using namespace antlr4;

ALangParser::ALangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ALangParser::~ALangParser() {
  delete _interpreter;
}

std::string ALangParser::getGrammarFileName() const {
  return "ALang.g4";
}

const std::vector<std::string>& ALangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ALangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- RootContext ------------------------------------------------------------------

ALangParser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ALangParser::InnerStatementListContext* ALangParser::RootContext::innerStatementList() {
  return getRuleContext<ALangParser::InnerStatementListContext>(0);
}

tree::TerminalNode* ALangParser::RootContext::EOF() {
  return getToken(ALangParser::EOF, 0);
}


size_t ALangParser::RootContext::getRuleIndex() const {
  return ALangParser::RuleRoot;
}

void ALangParser::RootContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRoot(this);
}

void ALangParser::RootContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRoot(this);
}

ALangParser::RootContext* ALangParser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, ALangParser::RuleRoot);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    innerStatementList();
    setState(41);
    match(ALangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

ALangParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALangParser::FunctionDeclarationContext::Function_() {
  return getToken(ALangParser::Function_, 0);
}

tree::TerminalNode* ALangParser::FunctionDeclarationContext::ID() {
  return getToken(ALangParser::ID, 0);
}

tree::TerminalNode* ALangParser::FunctionDeclarationContext::OpenRoundBracket() {
  return getToken(ALangParser::OpenRoundBracket, 0);
}

tree::TerminalNode* ALangParser::FunctionDeclarationContext::CloseRoundBracket() {
  return getToken(ALangParser::CloseRoundBracket, 0);
}

tree::TerminalNode* ALangParser::FunctionDeclarationContext::Colon() {
  return getToken(ALangParser::Colon, 0);
}

ALangParser::TypeContext* ALangParser::FunctionDeclarationContext::type() {
  return getRuleContext<ALangParser::TypeContext>(0);
}

ALangParser::BlockStatementContext* ALangParser::FunctionDeclarationContext::blockStatement() {
  return getRuleContext<ALangParser::BlockStatementContext>(0);
}

std::vector<tree::TerminalNode *> ALangParser::FunctionDeclarationContext::DocumentationComment() {
  return getTokens(ALangParser::DocumentationComment);
}

tree::TerminalNode* ALangParser::FunctionDeclarationContext::DocumentationComment(size_t i) {
  return getToken(ALangParser::DocumentationComment, i);
}

ALangParser::ParametersContext* ALangParser::FunctionDeclarationContext::parameters() {
  return getRuleContext<ALangParser::ParametersContext>(0);
}


size_t ALangParser::FunctionDeclarationContext::getRuleIndex() const {
  return ALangParser::RuleFunctionDeclaration;
}

void ALangParser::FunctionDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclaration(this);
}

void ALangParser::FunctionDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclaration(this);
}

ALangParser::FunctionDeclarationContext* ALangParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, ALangParser::RuleFunctionDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ALangParser::DocumentationComment) {
      setState(43);
      match(ALangParser::DocumentationComment);
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(49);
    match(ALangParser::Function_);
    setState(50);
    match(ALangParser::ID);
    setState(51);
    match(ALangParser::OpenRoundBracket);
    setState(53);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ALangParser::Int)
      | (1ULL << ALangParser::Void)
      | (1ULL << ALangParser::String)
      | (1ULL << ALangParser::Boolean)
      | (1ULL << ALangParser::ID))) != 0)) {
      setState(52);
      parameters();
    }
    setState(55);
    match(ALangParser::CloseRoundBracket);
    setState(56);
    match(ALangParser::Colon);
    setState(57);
    type();
    setState(58);
    blockStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametersContext ------------------------------------------------------------------

ALangParser::ParametersContext::ParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ALangParser::ParameterContext *> ALangParser::ParametersContext::parameter() {
  return getRuleContexts<ALangParser::ParameterContext>();
}

ALangParser::ParameterContext* ALangParser::ParametersContext::parameter(size_t i) {
  return getRuleContext<ALangParser::ParameterContext>(i);
}


size_t ALangParser::ParametersContext::getRuleIndex() const {
  return ALangParser::RuleParameters;
}

void ALangParser::ParametersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameters(this);
}

void ALangParser::ParametersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameters(this);
}

ALangParser::ParametersContext* ALangParser::parameters() {
  ParametersContext *_localctx = _tracker.createInstance<ParametersContext>(_ctx, getState());
  enterRule(_localctx, 4, ALangParser::RuleParameters);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    parameter();
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ALangParser::T__0) {
      setState(61);
      match(ALangParser::T__0);
      setState(62);
      parameter();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

ALangParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ALangParser::TypeContext* ALangParser::ParameterContext::type() {
  return getRuleContext<ALangParser::TypeContext>(0);
}

tree::TerminalNode* ALangParser::ParameterContext::ID() {
  return getToken(ALangParser::ID, 0);
}


size_t ALangParser::ParameterContext::getRuleIndex() const {
  return ALangParser::RuleParameter;
}

void ALangParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void ALangParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}

ALangParser::ParameterContext* ALangParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 6, ALangParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    type();
    setState(69);
    match(ALangParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallContext ------------------------------------------------------------------

ALangParser::FunctionCallContext::FunctionCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALangParser::FunctionCallContext::ID() {
  return getToken(ALangParser::ID, 0);
}

tree::TerminalNode* ALangParser::FunctionCallContext::OpenRoundBracket() {
  return getToken(ALangParser::OpenRoundBracket, 0);
}

tree::TerminalNode* ALangParser::FunctionCallContext::CloseRoundBracket() {
  return getToken(ALangParser::CloseRoundBracket, 0);
}

tree::TerminalNode* ALangParser::FunctionCallContext::SemiColon() {
  return getToken(ALangParser::SemiColon, 0);
}

ALangParser::ArgumentsContext* ALangParser::FunctionCallContext::arguments() {
  return getRuleContext<ALangParser::ArgumentsContext>(0);
}


size_t ALangParser::FunctionCallContext::getRuleIndex() const {
  return ALangParser::RuleFunctionCall;
}

void ALangParser::FunctionCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionCall(this);
}

void ALangParser::FunctionCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionCall(this);
}

ALangParser::FunctionCallContext* ALangParser::functionCall() {
  FunctionCallContext *_localctx = _tracker.createInstance<FunctionCallContext>(_ctx, getState());
  enterRule(_localctx, 8, ALangParser::RuleFunctionCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(ALangParser::ID);
    setState(72);
    match(ALangParser::OpenRoundBracket);
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ALangParser::BooleanConstant)
      | (1ULL << ALangParser::ID)
      | (1ULL << ALangParser::NUMBER)
      | (1ULL << ALangParser::DoubleQuoteString))) != 0)) {
      setState(73);
      arguments();
    }
    setState(76);
    match(ALangParser::CloseRoundBracket);
    setState(77);
    match(ALangParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallExpressionContext ------------------------------------------------------------------

ALangParser::FunctionCallExpressionContext::FunctionCallExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALangParser::FunctionCallExpressionContext::ID() {
  return getToken(ALangParser::ID, 0);
}

tree::TerminalNode* ALangParser::FunctionCallExpressionContext::OpenRoundBracket() {
  return getToken(ALangParser::OpenRoundBracket, 0);
}

tree::TerminalNode* ALangParser::FunctionCallExpressionContext::CloseRoundBracket() {
  return getToken(ALangParser::CloseRoundBracket, 0);
}

ALangParser::ArgumentsContext* ALangParser::FunctionCallExpressionContext::arguments() {
  return getRuleContext<ALangParser::ArgumentsContext>(0);
}


size_t ALangParser::FunctionCallExpressionContext::getRuleIndex() const {
  return ALangParser::RuleFunctionCallExpression;
}

void ALangParser::FunctionCallExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionCallExpression(this);
}

void ALangParser::FunctionCallExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionCallExpression(this);
}

ALangParser::FunctionCallExpressionContext* ALangParser::functionCallExpression() {
  FunctionCallExpressionContext *_localctx = _tracker.createInstance<FunctionCallExpressionContext>(_ctx, getState());
  enterRule(_localctx, 10, ALangParser::RuleFunctionCallExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(ALangParser::ID);
    setState(80);
    match(ALangParser::OpenRoundBracket);
    setState(82);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ALangParser::BooleanConstant)
      | (1ULL << ALangParser::ID)
      | (1ULL << ALangParser::NUMBER)
      | (1ULL << ALangParser::DoubleQuoteString))) != 0)) {
      setState(81);
      arguments();
    }
    setState(84);
    match(ALangParser::CloseRoundBracket);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentsContext ------------------------------------------------------------------

ALangParser::ArgumentsContext::ArgumentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ALangParser::ExpressionContext *> ALangParser::ArgumentsContext::expression() {
  return getRuleContexts<ALangParser::ExpressionContext>();
}

ALangParser::ExpressionContext* ALangParser::ArgumentsContext::expression(size_t i) {
  return getRuleContext<ALangParser::ExpressionContext>(i);
}


size_t ALangParser::ArgumentsContext::getRuleIndex() const {
  return ALangParser::RuleArguments;
}

void ALangParser::ArgumentsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArguments(this);
}

void ALangParser::ArgumentsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArguments(this);
}

ALangParser::ArgumentsContext* ALangParser::arguments() {
  ArgumentsContext *_localctx = _tracker.createInstance<ArgumentsContext>(_ctx, getState());
  enterRule(_localctx, 12, ALangParser::RuleArguments);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    expression(0);
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ALangParser::T__0) {
      setState(87);
      match(ALangParser::T__0);
      setState(88);
      expression(0);
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockStatementContext ------------------------------------------------------------------

ALangParser::BlockStatementContext::BlockStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALangParser::BlockStatementContext::OpenCurlyBracket() {
  return getToken(ALangParser::OpenCurlyBracket, 0);
}

ALangParser::InnerStatementListContext* ALangParser::BlockStatementContext::innerStatementList() {
  return getRuleContext<ALangParser::InnerStatementListContext>(0);
}

tree::TerminalNode* ALangParser::BlockStatementContext::CloseCurlyBracket() {
  return getToken(ALangParser::CloseCurlyBracket, 0);
}


size_t ALangParser::BlockStatementContext::getRuleIndex() const {
  return ALangParser::RuleBlockStatement;
}

void ALangParser::BlockStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockStatement(this);
}

void ALangParser::BlockStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockStatement(this);
}

ALangParser::BlockStatementContext* ALangParser::blockStatement() {
  BlockStatementContext *_localctx = _tracker.createInstance<BlockStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, ALangParser::RuleBlockStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(ALangParser::OpenCurlyBracket);
    setState(95);
    innerStatementList();
    setState(96);
    match(ALangParser::CloseCurlyBracket);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InnerStatementListContext ------------------------------------------------------------------

ALangParser::InnerStatementListContext::InnerStatementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ALangParser::InnerStatementContext *> ALangParser::InnerStatementListContext::innerStatement() {
  return getRuleContexts<ALangParser::InnerStatementContext>();
}

ALangParser::InnerStatementContext* ALangParser::InnerStatementListContext::innerStatement(size_t i) {
  return getRuleContext<ALangParser::InnerStatementContext>(i);
}


size_t ALangParser::InnerStatementListContext::getRuleIndex() const {
  return ALangParser::RuleInnerStatementList;
}

void ALangParser::InnerStatementListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInnerStatementList(this);
}

void ALangParser::InnerStatementListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInnerStatementList(this);
}

ALangParser::InnerStatementListContext* ALangParser::innerStatementList() {
  InnerStatementListContext *_localctx = _tracker.createInstance<InnerStatementListContext>(_ctx, getState());
  enterRule(_localctx, 16, ALangParser::RuleInnerStatementList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ALangParser::DocumentationComment)
      | (1ULL << ALangParser::Return)
      | (1ULL << ALangParser::Function_)
      | (1ULL << ALangParser::If)
      | (1ULL << ALangParser::Int)
      | (1ULL << ALangParser::Void)
      | (1ULL << ALangParser::String)
      | (1ULL << ALangParser::Boolean)
      | (1ULL << ALangParser::ID))) != 0)) {
      setState(98);
      innerStatement();
      setState(103);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InnerStatementContext ------------------------------------------------------------------

ALangParser::InnerStatementContext::InnerStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ALangParser::FunctionDeclarationContext* ALangParser::InnerStatementContext::functionDeclaration() {
  return getRuleContext<ALangParser::FunctionDeclarationContext>(0);
}

ALangParser::FunctionCallContext* ALangParser::InnerStatementContext::functionCall() {
  return getRuleContext<ALangParser::FunctionCallContext>(0);
}

ALangParser::IfElseIfElseStatementContext* ALangParser::InnerStatementContext::ifElseIfElseStatement() {
  return getRuleContext<ALangParser::IfElseIfElseStatementContext>(0);
}

ALangParser::ReturnStatementContext* ALangParser::InnerStatementContext::returnStatement() {
  return getRuleContext<ALangParser::ReturnStatementContext>(0);
}

ALangParser::VariableDeclarationContext* ALangParser::InnerStatementContext::variableDeclaration() {
  return getRuleContext<ALangParser::VariableDeclarationContext>(0);
}

ALangParser::VariableAssignmentContext* ALangParser::InnerStatementContext::variableAssignment() {
  return getRuleContext<ALangParser::VariableAssignmentContext>(0);
}


size_t ALangParser::InnerStatementContext::getRuleIndex() const {
  return ALangParser::RuleInnerStatement;
}

void ALangParser::InnerStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInnerStatement(this);
}

void ALangParser::InnerStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInnerStatement(this);
}

ALangParser::InnerStatementContext* ALangParser::innerStatement() {
  InnerStatementContext *_localctx = _tracker.createInstance<InnerStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, ALangParser::RuleInnerStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(104);
      functionDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(105);
      functionCall();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(106);
      ifElseIfElseStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(107);
      returnStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(108);
      variableDeclaration();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(109);
      variableAssignment();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

ALangParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ALangParser::TypeContext* ALangParser::VariableDeclarationContext::type() {
  return getRuleContext<ALangParser::TypeContext>(0);
}

tree::TerminalNode* ALangParser::VariableDeclarationContext::ID() {
  return getToken(ALangParser::ID, 0);
}

tree::TerminalNode* ALangParser::VariableDeclarationContext::Equals() {
  return getToken(ALangParser::Equals, 0);
}

ALangParser::ExpressionContext* ALangParser::VariableDeclarationContext::expression() {
  return getRuleContext<ALangParser::ExpressionContext>(0);
}

tree::TerminalNode* ALangParser::VariableDeclarationContext::SemiColon() {
  return getToken(ALangParser::SemiColon, 0);
}


size_t ALangParser::VariableDeclarationContext::getRuleIndex() const {
  return ALangParser::RuleVariableDeclaration;
}

void ALangParser::VariableDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDeclaration(this);
}

void ALangParser::VariableDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDeclaration(this);
}

ALangParser::VariableDeclarationContext* ALangParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 20, ALangParser::RuleVariableDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    type();
    setState(113);
    match(ALangParser::ID);
    setState(114);
    match(ALangParser::Equals);
    setState(115);
    expression(0);
    setState(116);
    match(ALangParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableAssignmentContext ------------------------------------------------------------------

ALangParser::VariableAssignmentContext::VariableAssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALangParser::VariableAssignmentContext::ID() {
  return getToken(ALangParser::ID, 0);
}

tree::TerminalNode* ALangParser::VariableAssignmentContext::Equals() {
  return getToken(ALangParser::Equals, 0);
}

ALangParser::ExpressionContext* ALangParser::VariableAssignmentContext::expression() {
  return getRuleContext<ALangParser::ExpressionContext>(0);
}

tree::TerminalNode* ALangParser::VariableAssignmentContext::SemiColon() {
  return getToken(ALangParser::SemiColon, 0);
}


size_t ALangParser::VariableAssignmentContext::getRuleIndex() const {
  return ALangParser::RuleVariableAssignment;
}

void ALangParser::VariableAssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableAssignment(this);
}

void ALangParser::VariableAssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableAssignment(this);
}

ALangParser::VariableAssignmentContext* ALangParser::variableAssignment() {
  VariableAssignmentContext *_localctx = _tracker.createInstance<VariableAssignmentContext>(_ctx, getState());
  enterRule(_localctx, 22, ALangParser::RuleVariableAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(ALangParser::ID);
    setState(119);
    match(ALangParser::Equals);
    setState(120);
    expression(0);
    setState(121);
    match(ALangParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStatementContext ------------------------------------------------------------------

ALangParser::ReturnStatementContext::ReturnStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALangParser::ReturnStatementContext::Return() {
  return getToken(ALangParser::Return, 0);
}

ALangParser::ExpressionContext* ALangParser::ReturnStatementContext::expression() {
  return getRuleContext<ALangParser::ExpressionContext>(0);
}

tree::TerminalNode* ALangParser::ReturnStatementContext::SemiColon() {
  return getToken(ALangParser::SemiColon, 0);
}


size_t ALangParser::ReturnStatementContext::getRuleIndex() const {
  return ALangParser::RuleReturnStatement;
}
